Update code to download data folder.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 33,
       "id": "45fe0020-62b8-4b59-a26b-762c409d7b29",
       "metadata": {
         "id": "45fe0020-62b8-4b59-a26b-762c409d7b29"
@@ -33,42 +33,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Or for zip files\n",
-        "!wget https://github.com/vxdao01/504/tree/modeling/census-income\n",
-        "!unzip census-income"
+        "# Download data folder from GitHub\n",
+        "!wget https://github.com/vxdao01/504/tree/modeling/census-income"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QfXXG3EDm8t",
-        "outputId": "cc7e81f3-7d94-4734-8b65-d9e2ab9c03d0"
+        "outputId": "0c471d3b-454d-4f84-db37-5af2df5cfcf2"
       },
       "id": "2QfXXG3EDm8t",
-      "execution_count": 22,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-04 03:54:25--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "--2025-08-04 05:03:20--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: unspecified [text/html]\n",
-            "Saving to: ‘census-income’\n",
+            "Saving to: ‘census-income.2’\n",
             "\n",
-            "census-income           [ <=>                ] 175.36K  --.-KB/s    in 0.1s    \n",
+            "census-income.2         [ <=>                ] 175.36K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-08-04 03:54:25 (1.75 MB/s) - ‘census-income’ saved [179571]\n",
-            "\n",
-            "Archive:  census-income\n",
-            "  End-of-central-directory signature not found.  Either this file is not\n",
-            "  a zipfile, or it constitutes one disk of a multi-part archive.  In the\n",
-            "  latter case the central directory and zipfile comment will be found on\n",
-            "  the last disk(s) of this archive.\n",
-            "unzip:  cannot find zipfile directory in one of census-income or\n",
-            "        census-income.zip, and cannot find census-income.ZIP, period.\n"
+            "2025-08-04 05:03:20 (1.78 MB/s) - ‘census-income.2’ saved [179571]\n",
+            "\n"
           ]
         }
       ]
@@ -84,7 +76,7 @@
         "id": "8Er234YSlLGG"
       },
       "id": "8Er234YSlLGG",
-      "execution_count": 23,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -102,7 +94,7 @@
         "id": "UePz9o0-mDSI"
       },
       "id": "UePz9o0-mDSI",
-      "execution_count": 24,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -283,20 +275,7 @@
         "sns.heatmap(df.select_dtypes(include=np.number).corr(), annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
         "plt.title(\"Correlation Matrix\")\n",
         "plt.show()\n",
-        "print(\"🔍 Insight: Education_num, capital_gain, and hours_per_week have the strongest positive correlation with income.\")\n",
-        "\n",
-        "# === 4. ENCODING & SCALING ===\n",
-        "df_encoded = pd.get_dummies(df, columns=[\n",
-        "    \"workclass\", \"education\", \"marital_status\", \"occupation\",\n",
-        "    \"relationship\", \"race\", \"sex\", \"native_country\"\n",
-        "])\n",
-        "\n",
-        "# Scale numeric features EXCEPT target\n",
-        "numeric_cols = df_encoded.select_dtypes(include=np.number).columns.tolist()\n",
-        "features_to_scale = [col for col in numeric_cols if col != \"income\"]\n",
-        "\n",
-        "scaler = StandardScaler()\n",
-        "df_encoded[features_to_scale] = scaler.fit_transform(df_encoded[features_to_scale])"
+        "print(\"🔍 Insight: Education_num, capital_gain, and hours_per_week have the strongest positive correlation with income.\")"
       ],
       "metadata": {
         "id": "PNfgveXI-85l",
@@ -345,6 +324,29 @@
         }
       ],
       "id": "PNfgveXI-85l"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# === 4. ENCODING & SCALING ===\n",
+        "df_encoded = pd.get_dummies(df, columns=[\n",
+        "    \"workclass\", \"education\", \"marital_status\", \"occupation\",\n",
+        "    \"relationship\", \"race\", \"sex\", \"native_country\"\n",
+        "])\n",
+        "\n",
+        "# Scale numeric features EXCEPT target\n",
+        "numeric_cols = df_encoded.select_dtypes(include=np.number).columns.tolist()\n",
+        "features_to_scale = [col for col in numeric_cols if col != \"income\"]\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "df_encoded[features_to_scale] = scaler.fit_transform(df_encoded[features_to_scale])"
+      ],
+      "metadata": {
+        "id": "vsaC3wZFdCbQ"
+      },
+      "id": "vsaC3wZFdCbQ",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
