--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "id": "45fe0020-62b8-4b59-a26b-762c409d7b29",
       "metadata": {
         "id": "45fe0020-62b8-4b59-a26b-762c409d7b29"
@@ -34,36 +34,49 @@
       "cell_type": "code",
       "source": [
         "# Download data folder from GitHub\n",
-        "!wget https://github.com/vxdao01/504/tree/modeling/census-income"
+        "!wget https://github.com/vxdao01/504/blob/modeling/csv_pca/psam_p06.csv"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QfXXG3EDm8t",
-        "outputId": "0c471d3b-454d-4f84-db37-5af2df5cfcf2"
+        "outputId": "62db84a5-3442-4fad-92ab-9a7913873c7d"
       },
       "id": "2QfXXG3EDm8t",
-      "execution_count": 35,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-04 05:03:20--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
-            "Resolving github.com (github.com)... 140.82.113.3\n",
-            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "--2025-08-10 05:22:28--  https://github.com/vxdao01/504/blob/modeling/csv_pca/psam_p06.csv\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: unspecified [text/html]\n",
-            "Saving to: ‘census-income.2’\n",
+            "Saving to: ‘psam_p06.csv’\n",
             "\n",
-            "census-income.2         [ <=>                ] 175.36K  --.-KB/s    in 0.1s    \n",
+            "psam_p06.csv            [ <=>                ] 175.46K  1001KB/s    in 0.2s    \n",
             "\n",
-            "2025-08-04 05:03:20 (1.78 MB/s) - ‘census-income.2’ saved [179571]\n",
+            "2025-08-10 05:22:29 (1001 KB/s) - ‘psam_p06.csv’ saved [179673]\n",
             "\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download second data set from GitHub\n",
+        "!wget https://github.com/vxdao01/504/tree/modeling/census-income"
+      ],
+      "metadata": {
+        "id": "tU7kJS_9bQqO"
+      },
+      "id": "tU7kJS_9bQqO",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -76,7 +89,7 @@
         "id": "8Er234YSlLGG"
       },
       "id": "8Er234YSlLGG",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,12 +107,12 @@
         "id": "UePz9o0-mDSI"
       },
       "id": "UePz9o0-mDSI",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "71e2dc81-b244-44b9-a050-eb8722b0017d",
       "metadata": {
         "id": "71e2dc81-b244-44b9-a050-eb8722b0017d",
@@ -244,7 +257,7 @@
         "id": "T-OySNvRZ8YT"
       },
       "id": "T-OySNvRZ8YT",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -285,7 +298,7 @@
         },
         "outputId": "998ad6c1-51e2-4471-dbc1-d748811c1d8f"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,7 +372,7 @@
         "id": "wNEXMHcNbBwf"
       },
       "id": "wNEXMHcNbBwf",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +462,7 @@
         "outputId": "233dd3bf-97a6-4546-fafc-588441bb5e08"
       },
       "id": "DtUmx529bGWy",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
