Read new data into df2 dataframe.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "45fe0020-62b8-4b59-a26b-762c409d7b29",
       "metadata": {
         "id": "45fe0020-62b8-4b59-a26b-762c409d7b29"
@@ -34,32 +34,32 @@
       "cell_type": "code",
       "source": [
         "# Download data folder from GitHub\n",
-        "!wget https://github.com/vxdao01/504/blob/modeling/csv_pca/psam_p06.csv"
+        "!wget --no-cache --output-document=psam_p06.csv https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2QfXXG3EDm8t",
-        "outputId": "62db84a5-3442-4fad-92ab-9a7913873c7d"
+        "outputId": "8b2a7674-5cf7-4840-b254-ffd4f8e4c3a7"
       },
       "id": "2QfXXG3EDm8t",
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2025-08-10 05:22:28--  https://github.com/vxdao01/504/blob/modeling/csv_pca/psam_p06.csv\n",
-            "Resolving github.com (github.com)... 140.82.114.3\n",
-            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "--2025-08-10 06:13:28--  https://raw.githubusercontent.com/vxdao01/504/modeling/csv_pca/psam_p06.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: unspecified [text/html]\n",
+            "Length: 134 [text/plain]\n",
             "Saving to: ‘psam_p06.csv’\n",
             "\n",
-            "psam_p06.csv            [ <=>                ] 175.46K  1001KB/s    in 0.2s    \n",
+            "\rpsam_p06.csv          0%[                    ]       0  --.-KB/s               \rpsam_p06.csv        100%[===================>]     134  --.-KB/s    in 0s      \n",
             "\n",
-            "2025-08-10 05:22:29 (1001 KB/s) - ‘psam_p06.csv’ saved [179673]\n",
+            "2025-08-10 06:13:28 (11.2 MB/s) - ‘psam_p06.csv’ saved [134/134]\n",
             "\n"
           ]
         }
@@ -72,25 +72,59 @@
         "!wget https://github.com/vxdao01/504/tree/modeling/census-income"
       ],
       "metadata": {
-        "id": "tU7kJS_9bQqO"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tU7kJS_9bQqO",
+        "outputId": "4381a36d-58d7-43f9-9e9c-8ade6768fa14"
       },
       "id": "tU7kJS_9bQqO",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-08-10 05:32:10--  https://github.com/vxdao01/504/tree/modeling/census-income\n",
+            "Resolving github.com (github.com)... 140.82.113.3\n",
+            "Connecting to github.com (github.com)|140.82.113.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘census-income’\n",
+            "\n",
+            "census-income           [ <=>                ] 175.96K   993KB/s    in 0.2s    \n",
+            "\n",
+            "2025-08-10 05:32:10 (993 KB/s) - ‘census-income’ saved [180183]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# !pwd\n",
-        "# !ls\n",
-        "os.chdir('/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project')"
+        "!ls\n",
+        "# os.chdir('/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project')"
       ],
       "metadata": {
-        "id": "8Er234YSlLGG"
+        "id": "8Er234YSlLGG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a954718c-7c5e-4c20-8162-92e6811509a0"
       },
       "id": "8Er234YSlLGG",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "census-income  psam_p06.csv  psam_p06.csv.1  sample_data\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -107,7 +141,7 @@
         "id": "UePz9o0-mDSI"
       },
       "id": "UePz9o0-mDSI",
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -245,6 +279,18 @@
         "\n",
         "print(f\"✅ Data cleaned. New shape: {df.shape}\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df2 = pd.read_csv('psam_p06.csv')"
+      ],
+      "metadata": {
+        "id": "LXp-4ldxeFnS"
+      },
+      "id": "LXp-4ldxeFnS",
+      "execution_count": 23,
+      "outputs": []
     },
     {
       "cell_type": "code",
