Fixed fetch command for GitHub to fetch correct file from GitHub LFS. Read correct file into dataframe, df2.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -103,6 +103,66 @@
     {
       "cell_type": "code",
       "source": [
+        "!apt-get install git-lfs\n",
+        "!git lfs install\n",
+        "!git clone https://github.com/vxdao01/504\n",
+        "%cd 504\n",
+        "!git lfs pull"
+      ],
+      "metadata": {
+        "id": "Uz6lJV7VpK9L",
+        "outputId": "d598b306-53e1-4b02-96b0-d250e74d2362",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "Uz6lJV7VpK9L",
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "git-lfs is already the newest version (3.0.2-1ubuntu0.3).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Git LFS initialized.\n",
+            "fatal: destination path '504' already exists and is not an empty directory.\n",
+            "/content/504\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout modeling"
+      ],
+      "metadata": {
+        "id": "05clyzHYq792",
+        "outputId": "8047faa2-b238-4155-cf17-f4f793f83ff4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "05clyzHYq792",
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Branch 'modeling' set up to track remote branch 'modeling' from 'origin'.\n",
+            "Switched to a new branch 'modeling'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# !pwd\n",
         "!ls\n",
         "# os.chdir('/content/drive/My Drive/Colab Notebooks/ADS-504-Final-Project')"
@@ -112,16 +172,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a954718c-7c5e-4c20-8162-92e6811509a0"
+        "outputId": "2f7565d4-5925-449e-d940-81ef1c4d8b43"
       },
       "id": "8Er234YSlLGG",
-      "execution_count": 11,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "census-income  psam_p06.csv  psam_p06.csv.1  sample_data\n"
+            "504-final-project.ipynb  census+income.zip  final-edit-cv.ipynb\n",
+            "census-income\t\t csv_pca\t    final-edit.ipynb\n"
           ]
         }
       ]
@@ -283,14 +344,75 @@
     {
       "cell_type": "code",
       "source": [
-        "df2 = pd.read_csv('psam_p06.csv')"
+        "# Read ACS PUMS data for California into dataframe\n",
+        "df2 = pd.read_csv('csv_pca/psam_p06.csv')"
       ],
       "metadata": {
         "id": "LXp-4ldxeFnS"
       },
       "id": "LXp-4ldxeFnS",
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df2.head(10))"
+      ],
+      "metadata": {
+        "id": "v53o0HqJnozJ",
+        "outputId": "01a51f3d-62bc-4763-98f8-d42ece5ddc88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "v53o0HqJnozJ",
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  RT       SERIALNO  DIVISION  SPORDER  PUMA  REGION  STATE   ADJINC  PWGTP  \\\n",
+            "0  P  2023GQ0000009         9        1  5924       4      6  1019518     85   \n",
+            "1  P  2023GQ0000028         9        1  8515       4      6  1019518     60   \n",
+            "2  P  2023GQ0000030         9        1  2500       4      6  1019518     27   \n",
+            "3  P  2023GQ0000033         9        1  5916       4      6  1019518     23   \n",
+            "4  P  2023GQ0000052         9        1  8106       4      6  1019518     51   \n",
+            "5  P  2023GQ0000083         9        1  3780       4      6  1019518     48   \n",
+            "6  P  2023GQ0000103         9        1  7708       4      6  1019518     70   \n",
+            "7  P  2023GQ0000125         9        1  3754       4      6  1019518     28   \n",
+            "8  P  2023GQ0000152         9        1  3776       4      6  1019518     32   \n",
+            "9  P  2023GQ0000168         9        1  7313       4      6  1019518     14   \n",
+            "\n",
+            "   AGEP  ...  PWGTP71  PWGTP72  PWGTP73  PWGTP74  PWGTP75  PWGTP76  PWGTP77  \\\n",
+            "0    19  ...       12       79       82       79       13       86      146   \n",
+            "1    23  ...       10       63       57       65       64        8       58   \n",
+            "2    35  ...       40       27       28       22        6       28        6   \n",
+            "3    60  ...       24       24       22       24       23       23       24   \n",
+            "4    23  ...       57       44      110       58      106       10        6   \n",
+            "5    19  ...        8       48       33       46       61       34       14   \n",
+            "6    80  ...       11       64      117      114      114       80        7   \n",
+            "7    28  ...       28       26       29       27       28       27       28   \n",
+            "8    20  ...       61       58       54       29        4       32       63   \n",
+            "9    58  ...       14       14       13       13       14       14       13   \n",
+            "\n",
+            "   PWGTP78  PWGTP79  PWGTP80  \n",
+            "0       83       13      161  \n",
+            "1        8       61       68  \n",
+            "2       27       25       44  \n",
+            "3       23       25       24  \n",
+            "4       48       38        7  \n",
+            "5       81        8       48  \n",
+            "6       94       85       72  \n",
+            "7       29       30       29  \n",
+            "8       30       33        4  \n",
+            "9       15       15       13  \n",
+            "\n",
+            "[10 rows x 287 columns]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
