Identified which columns to keep for analysis.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -110,11 +110,11 @@
         "!git lfs pull"
       ],
       "metadata": {
-        "id": "Uz6lJV7VpK9L",
-        "outputId": "d598b306-53e1-4b02-96b0-d250e74d2362",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uz6lJV7VpK9L",
+        "outputId": "d598b306-53e1-4b02-96b0-d250e74d2362"
       },
       "id": "Uz6lJV7VpK9L",
       "execution_count": 29,
@@ -141,11 +141,11 @@
         "!git checkout modeling"
       ],
       "metadata": {
-        "id": "05clyzHYq792",
-        "outputId": "8047faa2-b238-4155-cf17-f4f793f83ff4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "05clyzHYq792",
+        "outputId": "8047faa2-b238-4155-cf17-f4f793f83ff4"
       },
       "id": "05clyzHYq792",
       "execution_count": 32,
@@ -357,17 +357,17 @@
     {
       "cell_type": "code",
       "source": [
-        "print(df2.head(10))"
+        "print(df2.head())"
       ],
       "metadata": {
-        "id": "v53o0HqJnozJ",
-        "outputId": "01a51f3d-62bc-4763-98f8-d42ece5ddc88",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "v53o0HqJnozJ",
+        "outputId": "2aab12bd-ea54-4d08-de3c-f9168e6296f3"
       },
       "id": "v53o0HqJnozJ",
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -379,11 +379,6 @@
             "2  P  2023GQ0000030         9        1  2500       4      6  1019518     27   \n",
             "3  P  2023GQ0000033         9        1  5916       4      6  1019518     23   \n",
             "4  P  2023GQ0000052         9        1  8106       4      6  1019518     51   \n",
-            "5  P  2023GQ0000083         9        1  3780       4      6  1019518     48   \n",
-            "6  P  2023GQ0000103         9        1  7708       4      6  1019518     70   \n",
-            "7  P  2023GQ0000125         9        1  3754       4      6  1019518     28   \n",
-            "8  P  2023GQ0000152         9        1  3776       4      6  1019518     32   \n",
-            "9  P  2023GQ0000168         9        1  7313       4      6  1019518     14   \n",
             "\n",
             "   AGEP  ...  PWGTP71  PWGTP72  PWGTP73  PWGTP74  PWGTP75  PWGTP76  PWGTP77  \\\n",
             "0    19  ...       12       79       82       79       13       86      146   \n",
@@ -391,11 +386,6 @@
             "2    35  ...       40       27       28       22        6       28        6   \n",
             "3    60  ...       24       24       22       24       23       23       24   \n",
             "4    23  ...       57       44      110       58      106       10        6   \n",
-            "5    19  ...        8       48       33       46       61       34       14   \n",
-            "6    80  ...       11       64      117      114      114       80        7   \n",
-            "7    28  ...       28       26       29       27       28       27       28   \n",
-            "8    20  ...       61       58       54       29        4       32       63   \n",
-            "9    58  ...       14       14       13       13       14       14       13   \n",
             "\n",
             "   PWGTP78  PWGTP79  PWGTP80  \n",
             "0       83       13      161  \n",
@@ -403,16 +393,94 @@
             "2       27       25       44  \n",
             "3       23       25       24  \n",
             "4       48       38        7  \n",
-            "5       81        8       48  \n",
-            "6       94       85       72  \n",
-            "7       29       30       29  \n",
-            "8       30       33        4  \n",
-            "9       15       15       13  \n",
             "\n",
-            "[10 rows x 287 columns]\n"
+            "[5 rows x 287 columns]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List all column names\n",
+        "print(df2.columns.tolist())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MAxf9V98tlrC",
+        "outputId": "84ca3b0f-6ab5-45f5-b6c0-02dc7aa944dc"
+      },
+      "id": "MAxf9V98tlrC",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['RT', 'SERIALNO', 'DIVISION', 'SPORDER', 'PUMA', 'REGION', 'STATE', 'ADJINC', 'PWGTP', 'AGEP', 'CIT', 'CITWP', 'COW', 'DDRS', 'DEAR', 'DEYE', 'DOUT', 'DPHY', 'DRAT', 'DRATX', 'DREM', 'ENG', 'FER', 'GCL', 'GCM', 'GCR', 'HIMRKS', 'HINS1', 'HINS2', 'HINS3', 'HINS4', 'HINS5', 'HINS6', 'HINS7', 'INTP', 'JWMNP', 'JWRIP', 'JWTRNS', 'LANX', 'MAR', 'MARHD', 'MARHM', 'MARHT', 'MARHW', 'MARHYP', 'MIG', 'MIL', 'MLPA', 'MLPB', 'MLPCD', 'MLPE', 'MLPFG', 'MLPH', 'MLPIK', 'MLPJ', 'NWAB', 'NWAV', 'NWLA', 'NWLK', 'NWRE', 'OIP', 'PAP', 'RELSHIPP', 'RETP', 'SCH', 'SCHG', 'SCHL', 'SEMP', 'SEX', 'SSIP', 'SSP', 'WAGP', 'WKHP', 'WKL', 'WKWN', 'WRK', 'YOEP', 'ANC', 'ANC1P', 'ANC2P', 'DECADE', 'DIS', 'DRIVESP', 'ESP', 'ESR', 'FOD1P', 'FOD2P', 'HICOV', 'HISP', 'INDP', 'JWAP', 'JWDP', 'LANP', 'MIGPUMA', 'MIGSP', 'MSP', 'NAICSP', 'NATIVITY', 'NOP', 'OC', 'OCCP', 'PAOC', 'PERNP', 'PINCP', 'POBP', 'POVPIP', 'POWPUMA', 'POWSP', 'PRIVCOV', 'PUBCOV', 'QTRBIR', 'RAC1P', 'RAC2P', 'RAC3P', 'RACAIAN', 'RACASN', 'RACBLK', 'RACNH', 'RACNUM', 'RACPI', 'RACSOR', 'RACWHT', 'RC', 'SCIENGP', 'SCIENGRLP', 'SFN', 'SFR', 'SOCP', 'VPS', 'WAOB', 'FAGEP', 'FANCP', 'FCITP', 'FCITWP', 'FCOWP', 'FDDRSP', 'FDEARP', 'FDEYEP', 'FDISP', 'FDOUTP', 'FDPHYP', 'FDRATP', 'FDRATXP', 'FDREMP', 'FENGP', 'FESRP', 'FFERP', 'FFODP', 'FGCLP', 'FGCMP', 'FGCRP', 'FHICOVP', 'FHIMRKSP', 'FHINS1P', 'FHINS2P', 'FHINS3C', 'FHINS3P', 'FHINS4C', 'FHINS4P', 'FHINS5C', 'FHINS5P', 'FHINS6P', 'FHINS7P', 'FHISP', 'FINDP', 'FINTP', 'FJWDP', 'FJWMNP', 'FJWRIP', 'FJWTRNSP', 'FLANP', 'FLANXP', 'FMARP', 'FMARHDP', 'FMARHMP', 'FMARHTP', 'FMARHWP', 'FMARHYP', 'FMIGP', 'FMIGSP', 'FMILPP', 'FMILSP', 'FOCCP', 'FOIP', 'FPAP', 'FPERNP', 'FPINCP', 'FPOBP', 'FPOWSP', 'FPRIVCOVP', 'FPUBCOVP', 'FRACP', 'FRELSHIPP', 'FRETP', 'FSCHGP', 'FSCHLP', 'FSCHP', 'FSEMP', 'FSEXP', 'FSSIP', 'FSSP', 'FWAGP', 'FWKHP', 'FWKLP', 'FWKWNP', 'FWRKP', 'FYOEP', 'PWGTP1', 'PWGTP2', 'PWGTP3', 'PWGTP4', 'PWGTP5', 'PWGTP6', 'PWGTP7', 'PWGTP8', 'PWGTP9', 'PWGTP10', 'PWGTP11', 'PWGTP12', 'PWGTP13', 'PWGTP14', 'PWGTP15', 'PWGTP16', 'PWGTP17', 'PWGTP18', 'PWGTP19', 'PWGTP20', 'PWGTP21', 'PWGTP22', 'PWGTP23', 'PWGTP24', 'PWGTP25', 'PWGTP26', 'PWGTP27', 'PWGTP28', 'PWGTP29', 'PWGTP30', 'PWGTP31', 'PWGTP32', 'PWGTP33', 'PWGTP34', 'PWGTP35', 'PWGTP36', 'PWGTP37', 'PWGTP38', 'PWGTP39', 'PWGTP40', 'PWGTP41', 'PWGTP42', 'PWGTP43', 'PWGTP44', 'PWGTP45', 'PWGTP46', 'PWGTP47', 'PWGTP48', 'PWGTP49', 'PWGTP50', 'PWGTP51', 'PWGTP52', 'PWGTP53', 'PWGTP54', 'PWGTP55', 'PWGTP56', 'PWGTP57', 'PWGTP58', 'PWGTP59', 'PWGTP60', 'PWGTP61', 'PWGTP62', 'PWGTP63', 'PWGTP64', 'PWGTP65', 'PWGTP66', 'PWGTP67', 'PWGTP68', 'PWGTP69', 'PWGTP70', 'PWGTP71', 'PWGTP72', 'PWGTP73', 'PWGTP74', 'PWGTP75', 'PWGTP76', 'PWGTP77', 'PWGTP78', 'PWGTP79', 'PWGTP80']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# List of columns to keep\n",
+        "cols_to_keep = [\n",
+        "    'AGEP',\n",
+        "'SEX',\n",
+        "'RAC1P',\n",
+        "'RAC2P',\n",
+        "'RAC3P',\n",
+        "'HISP',\n",
+        "'STATE',\n",
+        "'PINCP',\n",
+        "'ADJINC',\n",
+        "'SCHL',\n",
+        "'CIT',\n",
+        "'NATIVITY',\n",
+        "'YOEP',\n",
+        "'PUMA',\n",
+        "'PWGTP',\n",
+        "'MSP',\n",
+        "'ESR',\n",
+        "'MAR',\n",
+        "'MSP',\n",
+        "'ESR',\n",
+        "'OCCP',\n",
+        "'INDP',\n",
+        "'WKHP',\n",
+        "'WAGP',\n",
+        "'SEMP',\n",
+        "'NATIVITY',\n",
+        "'YOEP',\n",
+        "'HISP',\n",
+        "'DIS',\n",
+        "'REGION',\n",
+        "'ADJINC'\n",
+        "    ]"
+      ],
+      "metadata": {
+        "id": "AawoEPFSr3qo"
+      },
+      "id": "AawoEPFSr3qo",
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Select only those columns (drops others automatically)\n",
+        "df3 = df2[cols_to_keep]"
+      ],
+      "metadata": {
+        "id": "zph5ahZMufo5"
+      },
+      "id": "zph5ahZMufo5",
+      "execution_count": 47,
+      "outputs": []
     },
     {
       "cell_type": "code",
