Replace NaN values in PINCP to use Yeo-Johnson transformation because PINCP is skewed and has negative and zero values. Apply Yeo-Johnson transformation.

--- a/final-edit.ipynb
+++ b/final-edit.ipynb
@@ -974,6 +974,27 @@
     {
       "cell_type": "code",
       "source": [
+        "# Replace NaNs in PINCP with a random number between -9600 and 175050\n",
+        "\n",
+        "# Identify where NaNs are in the column\n",
+        "nan_mask = df3['PINCP'].isna()\n",
+        "\n",
+        "# Generate random numbers only for NaN positions\n",
+        "random_values = np.random.uniform(low=-9600, high=175050, size=nan_mask.sum())\n",
+        "\n",
+        "# Fill NaNs with these random numbers\n",
+        "df3.loc[nan_mask, 'PINCP'] = random_values"
+      ],
+      "metadata": {
+        "id": "UH8KQIO16tWQ"
+      },
+      "id": "UH8KQIO16tWQ",
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Calculate correlation matrix for this subset\n",
         "corr_matrix = df_num[columns_to_describe].corr()\n",
         "\n",
@@ -1013,31 +1034,75 @@
         "# The target variable pincp is skewed and has negative and zero values, so we will apply a Yeo-Johnson transformation\n",
         "df3['PINCP_yeojohnson'], lambda_ = yeojohnson(df3['PINCP'])\n",
         "\n",
-        "print(df3)\n",
         "print(\"Lambda:\", lambda_)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 356
+          "base_uri": "https://localhost:8080/"
         },
         "id": "k3CmmCTQ2uhf",
-        "outputId": "e816ccfe-4046-4a26-8062-f8f852804181"
+        "outputId": "fd926c76-24bf-4be8-c780-8340a2a41bfb"
       },
       "id": "k3CmmCTQ2uhf",
-      "execution_count": 65,
+      "execution_count": 70,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "Yeo-Johnson input must be finite.",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-488155127.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# The target variable pincp is skewed and has negative and zero values, so we will apply a Yeo-Johnson transformation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PINCP_yeojohnson'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myeojohnson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'PINCP'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Lambda:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlambda_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/scipy/stats/_morestats.py\u001b[0m in \u001b[0;36myeojohnson\u001b[0;34m(x, lmbda)\u001b[0m\n\u001b[1;32m   1643\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1644\u001b[0m     \u001b[0;31m# if lmbda=None, find the lmbda that maximizes the log-likelihood function.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1645\u001b[0;31m     \u001b[0mlmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myeojohnson_normmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1646\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_yeojohnson_transform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlmax\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1647\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/scipy/stats/_morestats.py\u001b[0m in \u001b[0;36myeojohnson_normmax\u001b[0;34m(x, brack)\u001b[0m\n\u001b[1;32m   1837\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrstate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minvalid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1838\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfinite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1839\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Yeo-Johnson input must be finite.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1840\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1841\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;36m1.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Yeo-Johnson input must be finite."
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        AGEP  SEX  RAC1P  RAC2P  RAC3P  HISP  STATE          PINCP  SCHL  CIT  \\\n",
+            "0         19    2      8   8000     15     2      6    3600.000000  19.0    1   \n",
+            "1         23    1      1   1000      1     1      6     800.000000  19.0    1   \n",
+            "2         35    1      2   3000      2     1      6       0.000000  13.0    1   \n",
+            "3         60    1      1   1000      1     1      6    2700.000000  21.0    1   \n",
+            "4         23    1      1   1000      1     1      6    1800.000000  20.0    1   \n",
+            "...      ...  ...    ...    ...    ...   ...    ...            ...   ...  ...   \n",
+            "392313    43    1      1   1000      1     1      6  160000.000000  22.0    1   \n",
+            "392314    11    2      1   1000      1     1      6   37439.961340   8.0    1   \n",
+            "392315     9    1      1   1000      1     1      6  163745.287131   6.0    1   \n",
+            "392316    33    2      6   4015      4     1      6  100000.000000  21.0    4   \n",
+            "392317    58    1      8   8000     15    15      6    6000.000000  21.0    1   \n",
+            "\n",
+            "        ...  ESR    OCCP    INDP  WKHP      WAGP  SEMP    YOEP  DIS  REGION  \\\n",
+            "0       ...  1.0  4055.0  8680.0  16.0    3600.0   0.0     NaN    2       4   \n",
+            "1       ...  1.0  2850.0  8564.0  15.0     800.0   0.0     NaN    2       4   \n",
+            "2       ...  6.0     NaN     NaN   NaN       0.0   0.0     NaN    2       4   \n",
+            "3       ...  6.0     NaN     NaN   NaN       0.0   0.0     NaN    1       4   \n",
+            "4       ...  1.0  2850.0  8564.0  15.0    1800.0   0.0     NaN    2       4   \n",
+            "...     ...  ...     ...     ...   ...       ...   ...     ...  ...     ...   \n",
+            "392313  ...  1.0  1320.0  3580.0  50.0  160000.0   0.0     NaN    1       4   \n",
+            "392314  ...  NaN     NaN     NaN   NaN       NaN   NaN     NaN    2       4   \n",
+            "392315  ...  NaN     NaN     NaN   NaN       NaN   NaN     NaN    2       4   \n",
+            "392316  ...  1.0  1050.0  8790.0  40.0  100000.0   0.0  1991.0    2       4   \n",
+            "392317  ...  1.0  2350.0  7870.0  16.0    3600.0   0.0     NaN    2       4   \n",
+            "\n",
+            "        PINCP_yeojohnson  \n",
+            "0             819.834874  \n",
+            "1             248.861913  \n",
+            "2               0.000000  \n",
+            "3             652.805409  \n",
+            "4             473.449732  \n",
+            "...                  ...  \n",
+            "392313      16496.310380  \n",
+            "392314       5229.843210  \n",
+            "392315      16800.961222  \n",
+            "392316      11375.018727  \n",
+            "392317       1228.434258  \n",
+            "\n",
+            "[392318 rows x 28 columns]\n",
+            "Lambda: 0.7908142946121521\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-488155127.py:2: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  df3['PINCP_yeojohnson'], lambda_ = yeojohnson(df3['PINCP'])\n"
           ]
         }
       ]
